phone responsive done,also desktop

--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
     <!-- header start from here -->
     <header>
         <nav class="nav">
+            <div class="bar hide_for_desktop"><i class="fa-solid fa-bars"></i></div>
             <div class="nav_title">
-                <p>Influencer products</p>
+                <h3>Influencer products</h3>
             </div>
 
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Sign Up</a></li>
-                <li><a href="">Login</a></li>
-                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <ul >
+                
+                <li class="hide_for_mobile"><a href="">Home</a></li>
+                <li class="hide_for_mobile"><a href="">Products</a></li>
+                <li class="hide_for_mobile"><a href="">Sign Up</a></li>
+                <li class="hide_for_mobile"><a href="">Login</a></li>
+                <li class="hide_for_mobile"><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
                 <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
             </ul>
         </nav>
@@ -57,7 +59,7 @@
 
         </div>
 
-        <div class="sponser">
+        <div class="sponser ">
             <img src="logos/Alibaba.svg" alt="">
             <img src="logos/Amazon.svg" alt="">
             <img src="logos/Daraz.pk Logo.svg" alt="">
@@ -73,7 +75,7 @@
 
 
     <!-- main start from here -->
-    <main>
+    <main class="">
 
         <section class="section1">
 
@@ -240,7 +242,7 @@
 
 
     <!-- footer start from here -->
-    <footer>
+    <footer class="">
  <h3>Influencer products</h3>
  <p>Copyright &copy; 2020  influencer products</p>
  <p>All rights reserved |by Tipusahil</p>
